# liblufs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test_multi_plat.yml
Source/: LUFSMeter.cpp  LUFSMeter.h
Test/: main.cpp
include/: Block.h  Channel.h  ChannelProcessor.h  DoubleBuffer.h  Filter.h  FixedTermLoudnessMeter.h  GatedChannelProcessor.h  HistogramBlock.h  IntegratedLoudnessMeter.h  LUFSMeter.h  LiblufsAPI.h  LoudnessMeter.h  NonGatedChannelProcessor.h  SpinLock.h  TruePeakMeter.h
src/: ChannelProcessor.cpp  FixedTermLoudnessMeter.cpp  GatedChannelProcessor.cpp  IntegratedLoudnessMeter.cpp  LUFSMeter.cpp  LoudnessMeter.cpp  NonGatedChannelProcessor.cpp  TruePeakMeter.cpp
temp/: CMakeLists.txt
test/: .gitignore  CMakeLists.txt  EBU3341_Test_Set.cpp  test_test.cpp
